[package]
name = "storage_control"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.22", features = ["cargo", "derive"] }
csv = "1.3.1"
log = { version = "0.4.22", features = ["kv"] }
rand = "0.8.5"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
